--- a/oned/test/BUILD.bazel
+++ b/oned/test/BUILD.bazel
@@ -4,5 +4,5 @@ cc_test(
   srcs = ["stripe_test.cc"],
   copts = ["--std=c++20"],
   deps = ["//oned:stripe",
-  "@com_google_googletest//:gtest_main"],
+  "@googletest//:gtest_main"],
 )
