--- a/oned/bench/BUILD.bazel
+++ b/oned/bench/BUILD.bazel
@@ -4,6 +4,13 @@
 cc_binary(
     name = "delta_bench",
     srcs = ["delta_bench.cc"],
-    deps = ["//oned:delta"],
+    deps = ["@google_benchmark//:benchmark","//oned:delta"],
+    copts = ["--std=c++20"],
+)
+
+cc_binary(
+    name = "chunks_bench",
+    srcs = ["chunks_bench.cc"],
+    deps = ["@google_benchmark//:benchmark","//oned:stripe","//oned:chunks"],
     copts = ["--std=c++20"],
 )
