--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,3 +7,4 @@ module(
     compatibility_level = 1,
 )
 bazel_dep(name = "googletest", version = "1.15.0")
+bazel_dep(name = "google_benchmark", version = "1.8.5")
