--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,12 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Bazel
-      run: |
-        sudo apt-get update && sudo apt-get install -y wget g++ zlib1g-dev
-        wget https://github.com/bazelbuild/bazel/releases/download/6.0.0/bazel-6.0.0-linux-x86_64
-        chmod +x bazel-6.0.0-linux-x86_64
-        sudo mv bazel-6.0.0-linux-x86_64 /usr/local/bin/bazel
-        bazel --version
+      - uses: bazelbuild/setup-bazelisk@v2
 
     - name: Build
       run: |
