--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Bazel
-      - uses: bazelbuild/setup-bazelisk@v2
+      uses: bazelbuild/setup-bazelisk@v2
 
     - name: Build
       run: |
