--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,3 +6,5 @@ module(
     version = "head",
     compatibility_level = 1,
 )
+bazel_dep(name = "googletest", version = "1.15.0")
+bazel_dep(name = "google_benchmark", version = "1.8.5")
